# qt-pagination

./: CMakeLists.txt  circularbutton.cpp  circularbutton.h  indicator.cpp  indicator.h  main.cpp
